tests/ui/match/issue-92100.stderr
error[E0425]: cannot find value `a` in this scope
  --> $DIR/issue-92100.rs:5:10
   |
LL |         [a.., a] => {}
   |          ^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
